--- a/html/css/layout.css
+++ b/html/css/layout.css
@@ -18,11 +18,16 @@
 
 .l-main{
     display:flex;
+    flex-basis:100%;
+    height: 100%;
+    overflow: hidden;
+    width: 100%;
 }
 
 .l-left-bar{
     background:var(--side-panel-color);
     flex:1;
+    height: 100%;
 }
 
 .l-category{
@@ -38,6 +43,7 @@ main{
     background-color:var(--main-color);
     flex:4;
     padding: 3em;
+    overflow: scroll;
 }
 
 .l-right-bar{
@@ -45,6 +51,7 @@ main{
     color: var(--category-txt-passive-color);
     flex:1;
     font-family: 'Noto Sans JP', sans-serif;
+    height: 100%;
 }
 
 .l-status{
